# edu

./: .gitignore  CMakeLists.txt  Edu.cpp  README.md  julius_start.sh
ContentMaster/: ContentMasterBase_CommonMethods.cpp  EduContent.h  TitleContentMaster.cpp
DisplayView/: DisplayViewBase_CommonMethods.cpp  EduDisplayView.h  TitleDisplayView.cpp
Exec/: CMakeCache.txt  Edu_software_cpp  Makefile  cmake_install.cmake
Julius/: edu.jconf  juliusOrder.h  juliusReceiver  juliusReceiver.cpp  juliusReceiver.h  julius_start.sh  structOrder.h
Julius/client/: unix_socket_client.hpp
Julius/dict/: ForAnnouncement.dfa  ForAnnouncement.dict  ForAnnouncement.grammar  TestAWord.dict  TestAWord.grammar  TestAWord.term  TestAWord.voca  TestAWord.yomi  test.dict
Julius/server/: unix_socket_server.hpp
dict/: ForAnnouncement.term  ForAnnouncement.voca  ForAnnouncement.yomi  test.dfa  test.grammar  test.term  test.voca  test.yomi
